--- a/kafka.ui/kafka.ui/appsettings.json
+++ b/kafka.ui/kafka.ui/appsettings.json
@@ -6,5 +6,23 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Kafka UI",
+        "Uri": "http://localhost/healthz"
+      }
+    ],
+    "Webhooks": [
+      {
+        "Name": "",
+        "Uri": "",
+        "Payload": "",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
+  }
 }
